--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,12 @@
 ##to make the conf-file effect, (restart the tmux) or ( prefix + source-file ~/.tmux.conf)
 
-unbind C-b # release the default relationship between prefix and Ctrl + b
-set-option -g prefix C-f
-bind-key C-f last-window
+# unbind C-b # release the default relationship between prefix and Ctrl + b
+# set-option -g prefix C-f
+# bind-key C-f last-window
+
+unbind C-f # release the default relationship between prefix and Ctrl + b
+set-option -g prefix C-b
+bind-key C-b last-window
 
 # 在当前目录创建新窗口
 unbind-key c
@@ -12,10 +16,10 @@ unbind-key '"'
 unbind-key '%'
 bind '"' split-window -c '#{pane_current_path}'
 bind '%' split-window -h -c '#{pane_current_path}'
-bind b split-window -c '#{pane_current_path}'
 bind v split-window -h -c '#{pane_current_path}'
-bind c-b split-window -c '#{pane_current_path}'
 bind c-v split-window -h -c '#{pane_current_path}'
+# bind b split-window -c '#{pane_current_path}'
+# bind c-b split-window -c '#{pane_current_path}'
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # bind-key C-l select-window -l
