--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,9 +4,9 @@
 # set-option -g prefix C-f
 # bind-key C-f last-window
 
-unbind C-f # release the default relationship between prefix and Ctrl + b
-set-option -g prefix C-b
-bind-key C-b last-window
+unbind C-b # release the default relationship between prefix and Ctrl + b
+set-option -g prefix C-f
+bind-key C-f last-window
 
 # 在当前目录创建新窗口
 unbind-key c
@@ -18,8 +18,8 @@ bind '"' split-window -c '#{pane_current_path}'
 bind '%' split-window -h -c '#{pane_current_path}'
 bind v split-window -h -c '#{pane_current_path}'
 bind c-v split-window -h -c '#{pane_current_path}'
-# bind b split-window -c '#{pane_current_path}'
-# bind c-b split-window -c '#{pane_current_path}'
+bind b split-window -c '#{pane_current_path}'
+bind c-b split-window -c '#{pane_current_path}'
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # bind-key C-l select-window -l
@@ -64,11 +64,11 @@ set-option -g update-environment "DBUS_SESSION_BUS_ADDRESS DISPLAY SSH_ASKPASS S
 #set -g pane-border-format "#{pane_index} #T"
 
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @yank_selection_mouse 'clipboard' # or 'primary' or 'secondary'
+# # List of plugins
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @yank_selection_mouse 'clipboard' # or 'primary' or 'secondary'
 
 
 # # tmux-resurrect
@@ -85,5 +85,5 @@ set -g @yank_selection_mouse 'clipboard' # or 'primary' or 'secondary'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# run -b '~/.tmux/plugins/tpm/tpm'
