--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,7 +17,7 @@ set $mod Mod1
 font pango: Noto Sans 11
 
 # autostart
-exec --no-startup-id feh --bg-scale ~/Pictures/wall.png
+exec --no-startup-id feh --bg-scale ~/Pictures/CMYK.png
 exec --no-startup-id flameshot
 exec --no-startup-id compton -b
 exec --no-startup-id dunst
@@ -25,10 +25,9 @@ exec --no-startup-id keynav
 # exec --no-startup-id goldendict
 # exec_always variety
 # exec_always seafile
-exec_always ~/.script/init.sh
+# exec_always ~/.script/init.sh
 # exec_always ~/.config/polybar/launch.sh
 exec_always fcitx
-exec_always alacritty
 # exec_always i3-sensible-terminal
 
 
@@ -54,7 +53,7 @@ bindsym $mod+Return exec alacritty
 # bindsym $mod+Return exec i3-sensible-terminal
 
 # start file manager -- thunar
-bindsym $mod+u exec --no-startup-id dolphin # nautilus dolphin thunar
+bindsym $mod+u exec --no-startup-id nautilus # nautilus dolphin thunar
 
 # start dmenu (a program launcher)
 # bindsym $mod+space exec --no-startup-id i3-dmenu-desktop
@@ -215,11 +214,11 @@ bindsym $mod+m bar mode toggle
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    #     colors {
+    # colors {
     #     background #2f343f
     #     statusline #2f343f
     #     separator #4b5262
-    #
+    # 
     #     # colour of border, background, and text
     #     focused_workspace       #2f343f #bf616a #d8dee8
     #     active_workspace        #2f343f #2f343f #d8dee8
@@ -227,9 +226,8 @@ bar {
     #     urgent_workspacei       #2f343f #ebcb8b #2f343f
     # }
     # mode hide
-    height 24
+    # height 24
     status_command i3status
-    # status_command i3blocks
 }
 
 # hide the head title of windoes
@@ -237,4 +235,4 @@ bar {
 new_window none
 
 # gaps
-gaps inner 0
+# gaps inner 0
