--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,6 +53,10 @@ bind -r L resize-pane -R 5
 # bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
 # break-pane
 
+# 如果在windows环境下，将tmux选中的内容复制到系统剪切板
+if-shell -b 'test -n "$WSLENV"' 'bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel clip.exe'
+if-shell -b 'test -n "$WSLENV"' 'bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel clip.exe'
+
 # start windows numbering at 1
 set -g base-index 1
 # make pane numbering consistent with windows
