--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,7 +14,7 @@ set $mod Mod1
 # is used in the bar {} block below.
 # font pango:DejaVu Sans Mono 12
 # font pango:monospace 13
-font pango: Noto Sans 11
+font pango: Noto Sans 10
 
 # autostart
 exec --no-startup-id feh --bg-scale ~/Pictures/CMYK.png
@@ -49,8 +49,9 @@ bindsym $mod+b exec chromium
 
 # start a terminal
 # i3的脚本，自动选择系统安装的默认终端
-bindsym $mod+Return exec alacritty
+# bindsym $mod+Return exec alacritty
 # bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec st
 
 # start file manager -- thunar
 bindsym $mod+u exec --no-startup-id nautilus # nautilus dolphin thunar
@@ -140,7 +141,7 @@ bindsym mod4+Tab workspace next
 # alacritty-colorscheme
 # Set program location
 # set $alacritty_colorscheme ~/.bin/alacritty-colorscheme
-set $alacritty_colorscheme alacritty-colorscheme -C ~/.alacritty-themes
+# set $alacritty_colorscheme alacritty-colorscheme -C ~/.alacritty-themes
 
 # Toggle between light and dark colorscheme
 bindsym $mod+Shift+n exec $alacritty_colorscheme -t solarized-light.yml solarized-dark.yml
@@ -218,7 +219,7 @@ bar {
     #     background #2f343f
     #     statusline #2f343f
     #     separator #4b5262
-    # 
+    #
     #     # colour of border, background, and text
     #     focused_workspace       #2f343f #bf616a #d8dee8
     #     active_workspace        #2f343f #2f343f #d8dee8
