--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -68,24 +68,44 @@ scrolling:
   # Number of lines the viewport will move for every line scrolled when
   # scrollback is enabled (history > 0).
   multiplier: 3
+#
+# # Font configuration (changes require restart)
+# font:
+#   # The normal (roman) font face to use.
+#   normal:
+#     family: Source Code Pro
+#     # Style can be specified to pick a specific face.
+#     style: Regular
+#
+#   # The bold font face
+#   bold:
+#     family: Source Code Pro
+#     # Style can be specified to pick a specific face.
+#     style: Bold
+#
+#   # The italic font face
+#   italic:
+#     family: Source Code Pro
+#     # Style can be specified to pick a specific face.
+#     style: Italic
 
 # Font configuration (changes require restart)
 font:
   # The normal (roman) font face to use.
   normal:
-    family: Noto mono
+    family: DejaVuSansMono Nerd Font
     # Style can be specified to pick a specific face.
     style: Regular
 
   # The bold font face
   bold:
-    family: Noto mono
+    family: DejaVuSansMono Nerd Font
     # Style can be specified to pick a specific face.
     style: Bold
 
   # The italic font face
   italic:
-    family: Noto mono
+    family: DejaVuSansMono Nerd Font
     # Style can be specified to pick a specific face.
     style: Italic
 
