--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,7 +17,7 @@ set $mod Mod1
 font pango: Noto Sans 10
 
 # autostart
-exec --no-startup-id feh --bg-scale ~/Pictures/CMYK.png
+exec --no-startup-id feh --bg-scale ~/Picture/wall.jpg
 exec --no-startup-id flameshot
 exec --no-startup-id compton -b
 exec --no-startup-id dunst
@@ -26,9 +26,10 @@ exec --no-startup-id keynav
 # exec_always variety
 # exec_always seafile
 # exec_always ~/.script/init.sh
-# exec_always ~/.config/polybar/launch.sh
+exec_always ~/.config/polybar/launch.sh
 exec_always fcitx
-# exec_always i3-sensible-terminal
+# exec_always nextcloud
+exec_always alacritty
 
 
 
@@ -37,9 +38,12 @@ floating_modifier $mod
 
 #===programs shortcuts===
 
-bindsym XF86AudioRaiseVolume exec amixer -q set Master 5%+ unmute  
-bindsym XF86AudioLowerVolume exec amixer -q set Master 5%- unmute  
-bindsym XF86AudioMute exec amixer -q set Master mute  
+bindsym XF86AudioRaiseVolume exec pamixer -i 5
+bindsym XF86AudioLowerVolume exec pamixer -d 5
+bindsym XF86AudioMute        exec pamixer -t 
+# bindsym XF86AudioRaiseVolume exec amixer -q set Master 5%+ unmute  
+# bindsym XF86AudioLowerVolume exec amixer -q set Master 5%- unmute  
+# bindsym XF86AudioMute exec amixer -q set Master mute  
 # bindsym XF86AudioPlay exec playerctl play-pause  
 # bindsym XF86AudioNext exec playerctl next  
 # bindsym XF86AudioPrev exec playerctl previous  
@@ -49,12 +53,12 @@ bindsym $mod+b exec chromium
 
 # start a terminal
 # i3的脚本，自动选择系统安装的默认终端
-# bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec alacritty
 # bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec st
+# bindsym $mod+Return exec st
 
 # start file manager -- thunar
-bindsym $mod+u exec --no-startup-id nautilus # nautilus dolphin thunar
+bindsym $mod+u exec --no-startup-id thunar # nautilus dolphin thunar
 
 # start dmenu (a program launcher)
 # bindsym $mod+space exec --no-startup-id i3-dmenu-desktop
@@ -214,26 +218,27 @@ bindsym $mod+m bar mode toggle
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-    # colors {
-    #     background #2f343f
-    #     statusline #2f343f
-    #     separator #4b5262
-    #
-    #     # colour of border, background, and text
-    #     focused_workspace       #2f343f #bf616a #d8dee8
-    #     active_workspace        #2f343f #2f343f #d8dee8
-    #     inactive_workspace      #2f343f #2f343f #d8dee8
-    #     urgent_workspacei       #2f343f #ebcb8b #2f343f
-    # }
-    # mode hide
-    # height 24
-    status_command i3status
-}
+
+# bar {
+#     # colors {
+#     #     background #2f343f
+#     #     statusline #2f343f
+#     #     separator #4b5262
+#     #
+#     #     # colour of border, background, and text
+#     #     focused_workspace       #2f343f #bf616a #d8dee8
+#     #     active_workspace        #2f343f #2f343f #d8dee8
+#     #     inactive_workspace      #2f343f #2f343f #d8dee8
+#     #     urgent_workspacei       #2f343f #ebcb8b #2f343f
+#     # }
+#     mode hide
+#     height 24
+#     status_command i3status
+# }
 
 # hide the head title of windoes
 # new_window 1pixel
 new_window none
 
 # gaps
-# gaps inner 0
+gaps inner 4
