--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -29,7 +29,7 @@ alert = #bd2c40
 
 [bar/top]
 width = 100%
-height = 25
+height = 22
 ; bottom = true
 ; offset-x = 50%
 ; offset-y = 50%
@@ -53,11 +53,11 @@ module-margin-right = 1
 
 ; font-0 = FantasqueSansMono Nerd Font:pixelsize=13;1
 ; font-2 = unifont:fontformat=truetype:size=13:antialias=false;0
-font-0 = "Noto Sans Mono:style=Regular:size=13;1"
-font-1 = NotoEmoji Nerd Font:style=Book:size=13;1
+font-0 = "DejaVuSansMono Nerd Font:style=Regular:size=12;1"
+font-1 = NotoEmoji Nerd Font:style=Book:size=12;1
 font-2 = Unifont:style=Sans-Serif:size=13:antialias=false;0
-font-3 = siji:pixelsize=13;1
-font-4 = WenQuanYi Micro Hei Mono:size=13;1
+font-3 = siji:pixelsize=12;1
+font-4 = WenQuanYi Micro Hei Mono:size=12;1
 
 
 modules-left = i3
