--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,7 +72,7 @@ set-option -g update-environment "DBUS_SESSION_BUS_ADDRESS DISPLAY SSH_ASKPASS S
 # # List of plugins
 # set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @yank_selection_mouse 'clipboard' # or 'primary' or 'secondary'
 
 
