--- a/.config/i3/config
+++ b/.config/i3/config
@@ -22,11 +22,11 @@ exec --no-startup-id flameshot
 exec --no-startup-id compton -b
 exec --no-startup-id dunst
 exec --no-startup-id keynav
-exec --no-startup-id goldendict
+# exec --no-startup-id goldendict
 # exec_always variety
 # exec_always seafile
 # exec_always ~/.script/init.sh
-# exec_always ~/.config/polybar/launch.sh
+exec_always ~/.config/polybar/launch.sh
 # exec_always nextcloud
 exec_always fcitx
 exec_always alacritty
@@ -39,18 +39,28 @@ floating_modifier $mod
 
 #===programs shortcuts===
 
-bindsym XF86AudioRaiseVolume exec pamixer -i 10
-bindsym XF86AudioLowerVolume exec pamixer -d 10
-bindsym XF86AudioMute        exec pamixer -t 
+bindsym XF86AudioRaiseVolume   exec pamixer -i 10
+bindsym XF86AudioLowerVolume   exec pamixer -d 10
+bindsym XF86AudioMute          exec pamixer -t 
+
+bindsym XF86TouchpadToggle     exec ~/.script/TouchpadToggle.sh
+
+bindsym XF86KbdBrightnessUp    exec brightnessctl --device='asus::kbd_backlight' set +1 > /dev/null
+bindsym XF86KbdBrightnessDown  exec brightnessctl --device='asus::kbd_backlight' set 1- > /dev/null
+
+bindsym XF86MonBrightnessUp    exec brightnessctl set +20% > /dev/null
+bindsym XF86MonBrightnessDown  exec brightnessctl set 20%- > /dev/null
+
 # bindsym XF86AudioRaiseVolume exec amixer -q set Master 5%+ unmute  
 # bindsym XF86AudioLowerVolume exec amixer -q set Master 5%- unmute  
 # bindsym XF86AudioMute exec amixer -q set Master mute  
+#
 # bindsym XF86AudioPlay exec playerctl play-pause  
 # bindsym XF86AudioNext exec playerctl next  
 # bindsym XF86AudioPrev exec playerctl previous  
 
 # bindsym $mod+b exec google-chrome-stable
-bindsym $mod+b exec chromium
+bindsym $mod+b exec firefox
 
 # start a terminal
 # i3的脚本，自动选择系统安装的默认终端
@@ -220,22 +230,22 @@ bindsym $mod+m bar mode toggle
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
-bar {
-    # colors {
-    #     background #2f343f
-    #     statusline #2f343f
-    #     separator #4b5262
-    #
-    #     # colour of border, background, and text
-    #     focused_workspace       #2f343f #bf616a #d8dee8
-    #     active_workspace        #2f343f #2f343f #d8dee8
-    #     inactive_workspace      #2f343f #2f343f #d8dee8
-    #     urgent_workspacei       #2f343f #ebcb8b #2f343f
-    # }
-    mode hide
-    height 24
-    status_command i3status
-}
+# bar {
+#     # colors {
+#     #     background #2f343f
+#     #     statusline #2f343f
+#     #     separator #4b5262
+#     #
+#     #     # colour of border, background, and text
+#     #     focused_workspace       #2f343f #bf616a #d8dee8
+#     #     active_workspace        #2f343f #2f343f #d8dee8
+#     #     inactive_workspace      #2f343f #2f343f #d8dee8
+#     #     urgent_workspacei       #2f343f #ebcb8b #2f343f
+#     # }
+#     mode hide
+#     height 24
+#     status_command i3status
+# }
 
 # hide the head title of windoes
 # new_window 1pixel
