--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -1,29 +1,48 @@
+# ~/.config/i3status/config
+
 general {
-        output_format = "dzen2"
         colors = true
-        interval = 5
+        interval = 3
 }
 
-order += "ipv6"
-order += "disk /"
-order += "run_watch DHCP"
-order += "run_watch VPNC"
-order += "path_exists VPN"
-order += "wireless wlan0"
-order += "ethernet eth0"
-order += "battery 0"
-order += "memory"
+order += "cpu_usage"
 order += "load"
+order += "disk /"
+order += "ethernet _first_"
+order += "volume master"
+order += "battery 0"
 order += "tztime local"
 
-wireless wlan0 {
-        format_up = "W: (%quality at %essid, %bitrate) %ip"
-        format_down = "W: down"
+ethernet  _first_ {
+        # if you use %speed, i3status requires root privileges
+#        format_up = "E: %ip (%speed)"
+        format_up = "eth: %ip"
+        format_down = "E: down"
 }
 
-ethernet eth0 {
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+cpu_usage {
+        format = "CPU %usage "
+}
+
+tztime local {
+        format = "%Y-%m-%d %H:%M:%S"
+}
+
+load {
+        format = "%1min %5min %15min"
+}
+
+disk "/" {
+  format = "Used / %percentage_used"
+  separator = false
+}
+
+volume master {
+        format = "♪: %volume"
+        format_muted = "♪: muted (%volume)"
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
 }
 
 battery 0 {
@@ -35,51 +54,4 @@ battery 0 {
         status_full = "☻ FULL"
         path = "/sys/class/power_supply/BAT%d/uevent"
         low_threshold = 10
-}
-
-run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
-}
-
-run_watch VPNC {
-        # file containing the PID of a vpnc process
-        pidfile = "/var/run/vpnc/pid"
-}
-
-path_exists VPN {
-        # path exists when a VPN tunnel launched by nmcli/nm-applet is active
-        path = "/proc/sys/net/ipv4/conf/tun0"
-}
-
-tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
-        hide_if_equals_localtime = true
-}
-
-tztime berlin {
-        format = "%Y-%m-%d %H:%M:%S %Z"
-        timezone = "Europe/Berlin"
-}
-
-load {
-        format = "%5min"
-}
-
-cpu_temperature 0 {
-        format = "T: %degrees °C"
-        path = "/sys/devices/platform/coretemp.0/temp1_input"
-}
-
-memory {
-        format = "%used"
-        threshold_degraded = "10%"
-        format_degraded = "MEMORY: %free"
-}
-
-disk "/" {
-        format = "%free"
-}
-
-read_file uptime {
-        path = "/proc/uptime"
 }
