--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-    name = qistout
-    email = 2817253603@qq.com
+    name = qiqiang
+    email = 13214867244@163.com
 
 [core]
     editor=vim
