--- a/.config/i3/config
+++ b/.config/i3/config
@@ -12,30 +12,31 @@
 set $mod Mod1
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-# font pango:DejaVu Sans Mono 12
-# font pango:monospace 13
-font pango: Noto Sans 10
+font pango: DejaVuSansMono Nerd Font 10
 
 # autostart
-exec --no-startup-id feh --bg-scale ~/Picture/wall.jpg
+exec --no-startup-id feh --bg-scale ~/Picture/grey.png
 exec --no-startup-id flameshot
-# exec --no-startup-id compton -b
 exec --no-startup-id dunst
 exec --no-startup-id keynav
+exec_always fcitx
+exec --no-startup-id picom -b
 # exec --no-startup-id goldendict
 # exec_always variety
 # exec_always seafile
 # exec_always ~/.script/init.sh
-exec_always ~/.config/polybar/launch.sh
+# exec_always ~/.config/polybar/launch.sh
 # exec_always nextcloud
-exec_always fcitx
-exec_always alacritty
+# exec_always alacritty
 # exec_always st
 
 
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
+
+# assign [class="Alacritty"] 1
+# assign [class="firefox"] 2
 
 #===programs shortcuts===
 
@@ -59,13 +60,13 @@ bindsym XF86MonBrightnessDown  exec brightnessctl set 20%- > /dev/null
 # bindsym XF86AudioNext exec playerctl next  
 # bindsym XF86AudioPrev exec playerctl previous  
 
-# bindsym $mod+b exec google-chrome-stable
-bindsym $mod+b exec firefox
+bindsym $mod+b exec google-chrome-stable
+# bindsym $mod+b exec firefox
 
 # start a terminal
 # i3的脚本，自动选择系统安装的默认终端
-bindsym $mod+Return exec alacritty
-# bindsym $mod+Return exec st
+# bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec st
 # bindsym $mod+Return exec i3-sensible-terminal
 
 # start file manager -- thunar
@@ -168,28 +169,28 @@ bindsym $mod+Shift+m exec $alacritty_colorscheme -T
 bindsym $mod+Shift+b exec notify-send "Alacritty Colorscheme" `$alacritty_colorscheme -s`
 
 # switch to workspace
-bindsym $mod+1 workspace $ws1
-bindsym $mod+2 workspace $ws2
-bindsym $mod+3 workspace $ws3
-bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace $ws5
-bindsym $mod+6 workspace $ws6
-bindsym $mod+7 workspace $ws7
-bindsym $mod+8 workspace $ws8
-bindsym $mod+9 workspace $ws9
-bindsym $mod+0 workspace $ws10
+bindsym $mod+1 workspace 1
+bindsym $mod+2 workspace 2
+bindsym $mod+3 workspace 3
+bindsym $mod+4 workspace 4
+bindsym $mod+5 workspace 5
+bindsym $mod+6 workspace 6
+bindsym $mod+7 workspace 7
+bindsym $mod+8 workspace 8
+bindsym $mod+9 workspace 9
+bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $ws1
-bindsym $mod+Shift+2 move container to workspace $ws2
-bindsym $mod+Shift+3 move container to workspace $ws3
-bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace $ws5
-bindsym $mod+Shift+6 move container to workspace $ws6
-bindsym $mod+Shift+7 move container to workspace $ws7
-bindsym $mod+Shift+8 move container to workspace $ws8
-bindsym $mod+Shift+9 move container to workspace $ws9
-bindsym $mod+Shift+0 move container to workspace $ws10
+bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+4 move container to workspace 4
+bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+0 move container to workspace 10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -230,22 +231,23 @@ bindsym $mod+m bar mode toggle
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
-# bar {
-#     # colors {
-#     #     background #2f343f
-#     #     statusline #2f343f
-#     #     separator #4b5262
-#     #
-#     #     # colour of border, background, and text
-#     #     focused_workspace       #2f343f #bf616a #d8dee8
-#     #     active_workspace        #2f343f #2f343f #d8dee8
-#     #     inactive_workspace      #2f343f #2f343f #d8dee8
-#     #     urgent_workspacei       #2f343f #ebcb8b #2f343f
-#     # }
-#     mode hide
-#     height 24
-#     status_command i3status
-# }
+bar {
+    # colors {
+    #     background #2f343f
+    #     statusline #2f343f
+    #     separator #4b5262
+    #
+    #     # colour of border, background, and text
+    #     focused_workspace       #2f343f #bf616a #d8dee8
+    #     active_workspace        #2f343f #2f343f #d8dee8
+    #     inactive_workspace      #2f343f #2f343f #d8dee8
+    #     urgent_workspacei       #2f343f #ebcb8b #2f343f
+    # }
+    # mode hide
+    height 24
+    position top
+    status_command i3status
+}
 
 # hide the head title of windoes
 # new_window 1pixel
