--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -6,14 +6,21 @@ general {
 }
 
 order += "cpu_usage"
-order += "load"
+order += "memory"
+# order += "load"
 order += "disk /"
-order += "ethernet _first_"
+order += "wireless wlp4s0"
 order += "volume master"
 order += "battery 0"
 order += "tztime local"
 
-ethernet  _first_ {
+wireless wlp4s0 {
+    # format_up = "W: (%quality at %essid, %bitrate) %ip"
+    format_up = "%essid: %ip"
+    format_down = "W: down"
+}
+
+ethernet  wlp4s0 {
         # if you use %speed, i3status requires root privileges
 #        format_up = "E: %ip (%speed)"
         format_up = "eth: %ip"
@@ -48,10 +55,20 @@ volume master {
 battery 0 {
         format = "%status %percentage %remaining %emptytime"
         format_down = "No battery"
-        status_chr = "⚡ CHR"
-        status_bat = "🔋 BAT"
-        status_unk = "? UNK"
-        status_full = "☻ FULL"
-        path = "/sys/class/power_supply/BAT%d/uevent"
+        status_chr = "CHR"
+        status_bat = "BAT"
+        status_unk = "UNK"
+        status_full = "FULL"
+        # status_chr = "⚡ CHR"
+        # status_bat = "🔋 BAT"
+        # status_unk = "? UNK"
+        # status_full = "☻ FULL"
+        path = "/sys/class/power_supply/BAT1/uevent"
         low_threshold = 10
+}
+
+memory {
+    format = "%used"
+    threshold_degraded = "10%"
+    format_degraded = "MEMORY: %free"
 }
