--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -16,7 +16,8 @@ order += "tztime local"
 
 wireless wlp4s0 {
     # format_up = "W: (%quality at %essid, %bitrate) %ip"
-    format_up = "%essid: %ip"
+    # format_up = "%essid: %ip"
+    format_up = "%essid"
     format_down = "W: down"
 }
 
