--- a/.config/i3/config
+++ b/.config/i3/config
@@ -15,20 +15,19 @@ set $mod Mod1
 font pango: DejaVuSansMono Nerd Font 10
 
 # autostart
-exec --no-startup-id feh --bg-scale ~/Picture/grey.png
+exec --no-startup-id feh --bg-scale ~/Picture/camera.jpg
 exec --no-startup-id flameshot
 exec --no-startup-id dunst
 exec --no-startup-id keynav
-exec --no-startup-id qv2ray
+# exec --no-startup-id qv2ray
 exec_always fcitx
-exec --no-startup-id picom -b
+# exec --no-startup-id picom -b
 # exec --no-startup-id goldendict
 # exec_always variety
 # exec_always seafile
 exec_always ~/.script/auto/init.sh
 # exec_always ~/.config/polybar/launch.sh
 # exec_always nextcloud
-# exec_always alacritty
 # exec_always st
 # exec_always google-chrome-stable
 exec brightnessctl --device='asus::kbd_backlight' set 0 > /dev/null
@@ -38,11 +37,19 @@ exec brightnessctl --device='asus::kbd_backlight' set 0 > /dev/null
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+# Make the currently focused window a scratchpad
+bindsym $mod+Shift+minus move scratchpad
+# Show the first scratchpad window
+bindsym $mod+minus scratchpad show
+
 # assign [class="Google-chrome"] 1
 # assign [class="st"] 2
 # assign [class="Joplin"] 3
 
-for_window [class="GoldenDict" instance="goldendict"] floating enable
+for_window [class="GoldenDict" instance="goldendict"] floating enable, resize set 1000 800, move absolute position center
+# for_window [class="your-program"] floating enable, resize set x y
+for_window [class="Anki"] floating enable, resize set 1000 800, move scratchpad, scratchpad show
+bindsym $mod+Ctrl+c move absolute position center
 
 #===programs shortcuts===
 
@@ -67,12 +74,11 @@ bindsym XF86MonBrightnessDown  exec brightnessctl set 20%- > /dev/null
 # bindsym XF86AudioPrev exec playerctl previous  
 
 # bindsym $mod+b exec google-chrome-stable
-bindsym $mod+b exec firefox
-# bindsym $mod+b exec ~/.script/startbrowser.sh
+# bindsym $mod+b exec firefox
+bindsym $mod+b exec ~/.script/startbrowser.sh
 
 # start a terminal
 # i3的脚本，自动选择系统安装的默认终端
-# bindsym $mod+Return exec alacritty
 bindsym $mod+Return exec st
 # bindsym $mod+Return exec i3-sensible-terminal
 
@@ -97,10 +103,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+bindsym $mod+Shift+h move left 80 px
+bindsym $mod+Shift+j move down 80 px
+bindsym $mod+Shift+k move up 80 px
+bindsym $mod+Shift+l move right 80 px
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -108,13 +114,11 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# split in horizontal orientation
-# bindsym $mod+h split h
-bindsym $mod+c split h
-# bindsym $mod+w split h
 
 # split in vertical orientation
 bindsym $mod+v split v
+# split in horizontal orientation
+bindsym $mod+c split h
 
 # kill focused window
 # kill with alt+F4
@@ -138,7 +142,7 @@ bindsym $mod+e layout toggle split
 # bindsym $mod+u border none
 bindsym $mod+n border normal
 bindsym $mod+o border 1pixel
-# bindsym $mod+b border toggle
+bindsym $mod+a border toggle
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -200,6 +204,7 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -238,28 +243,38 @@ bindsym $mod+m bar mode toggle
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-
 bar {
-    # colors {
-    #     background #2f343f
-    #     statusline #2f343f
-    #     separator #4b5262
-    #
-    #     # colour of border, background, and text
-    #     focused_workspace       #2f343f #bf616a #d8dee8
-    #     active_workspace        #2f343f #2f343f #d8dee8
-    #     inactive_workspace      #2f343f #2f343f #d8dee8
-    #     urgent_workspacei       #2f343f #ebcb8b #2f343f
-    # }
+    colors {
+        background #2f343f
+        # statusline #2f343f
+        # separator #4b5262
+
+        # # colour of border, background, and text
+        # focused_workspace       #2f343f #bf616a #d8dee8
+        # active_workspace        #2f343f #2f343f #d8dee8
+        # inactive_workspace      #2f343f #2f343f #d8dee8
+        # urgent_workspacei       #2f343f #ebcb8b #2f343f
+    }
     # mode hide
     height 24
     position top
     status_command i3status
 }
 
+# bar {
+#     position top
+#     font pango: DejaVu Sans Mono 9
+#     status_command i3blocks -c $XDG_CONFIG_HOME/i3/i3blocks
+#     tray_output primary
+#     colors {
+#         focused_workspace  #333333 #222222 #FFFFFF
+#         inactive_workspace #000000 #000000 #AAAAAA
+#     }
+# }
+
 # hide the head title of windoes
 # new_window 1pixel
 new_window none
 
 # gaps
-gaps inner 8
+gaps inner 0
