--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -18,7 +18,8 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #aa222222
+; background = #aa222222
+background = #332F343F
 background-alt = #aa444444
 ;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
