--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,10 +28,10 @@ set-option -g history-limit 30000
 # set-option -g default-shell /bin/zsh  # 使用 zsh 为默认 shell
 set-window-option -g mode-keys vi # vi key
 set-option -g status-keys vi
-set-option -g status off
+set-option -g status on
 set -sg escape-time 0
 set -g default-terminal "tmux-256color"
-set -g mouse on
+set -g mouse off
 
 # vim-like pane selection
 bind l select-pane -R
