--- a/.condarc
+++ b/.condarc
@@ -1,14 +1,18 @@
-auto_activate_base: false
+auto_activate_base: true
 
-channels:
-    - defaults
 show_channel_urls: true
 default_channels:
-    - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main
-    - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/r
+  - https://mirrors.bfsu.edu.cn/anaconda/pkgs/main
+  - https://mirrors.bfsu.edu.cn/anaconda/pkgs/r
 custom_channels:
-    conda-forge: https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud
-    msys2: https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud
-    bioconda: https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud
-    menpo: https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud
-    pytorch: https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud
+  conda-forge: https://mirrors.bfsu.edu.cn/anaconda/cloud
+  msys2: https://mirrors.bfsu.edu.cn/anaconda/cloud
+  bioconda: https://mirrors.bfsu.edu.cn/anaconda/cloud
+  menpo: https://mirrors.bfsu.edu.cn/anaconda/cloud
+  pytorch: https://mirrors.bfsu.edu.cn/anaconda/cloud
+channels:
+  - https://mirrors.bfsu.edu.cn/anaconda/cloud/bioconda/
+  - https://mirrors.bfsu.edu.cn/anaconda/cloud/conda-forge/
+  - https://mirrors.bfsu.edu.cn/anaconda/pkgs/main/
+  - https://mirrors.bfsu.edu.cn/anaconda/pkgs/free/
+  - defaults
