--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".config/alacritty/alacritty-theme"]
 	path = .config/alacritty/alacritty-theme
 	url = git@github.com:eendroroy/alacritty-theme.git
+[submodule "nvim-config"]
+	path = nvim-config
+	url = git@github.com:baildagq/nvim-config.git
