--- a/.config/i3/config
+++ b/.config/i3/config
@@ -28,7 +28,7 @@ exec_always fcitx
 # exec_always variety
 # exec_always seafile
 exec_always ~/.script/auto/init.sh
-# exec_always ~/.config/polybar/launch.sh
+exec_always ~/.config/polybar/launch.sh
 # exec_always nextcloud
 # exec_always st
 # exec_always google-chrome-stable
@@ -246,25 +246,25 @@ bindsym $mod+r mode "resize"
 # bar toggle, hide or show
 bindsym $mod+m bar mode toggle
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-    colors {
-        background #2f343f
-        # statusline #2f343f
-        # separator #4b5262
-
-        # # colour of border, background, and text
-        # focused_workspace       #2f343f #bf616a #d8dee8
-        # active_workspace        #2f343f #2f343f #d8dee8
-        # inactive_workspace      #2f343f #2f343f #d8dee8
-        # urgent_workspacei       #2f343f #ebcb8b #2f343f
-    }
-    # mode hide
-    # height 24
-    position bottom
-    status_command i3status
-}
+# # Start i3bar to display a workspace bar (plus the system information i3status
+# # finds out, if available)
+# bar {
+#     colors {
+#         background #2f343f
+#         # statusline #2f343f
+#         # separator #4b5262
+# 
+#         # # colour of border, background, and text
+#         # focused_workspace       #2f343f #bf616a #d8dee8
+#         # active_workspace        #2f343f #2f343f #d8dee8
+#         # inactive_workspace      #2f343f #2f343f #d8dee8
+#         # urgent_workspacei       #2f343f #ebcb8b #2f343f
+#     }
+#     # mode hide
+#     # height 24
+#     position bottom
+#     status_command i3status
+# }
 
 # bar {
 #     position top
@@ -282,4 +282,4 @@ bar {
 new_window none
 
 # gaps
-# gaps inner 8
+gaps inner 16
