alacritty support fullscreen

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -230,8 +230,6 @@ working_directory: None
 # backend cannot be initialized.
 enable_experimental_conpty_backend: false
 
-# Send ESC (\x1b) before characters when alt is pressed.
-alt_send_esc: true
 
 debug:
   # Display the time it takes to redraw each frame.
@@ -539,6 +537,8 @@ key_bindings:
   - {key: F8, mods: Super, chars: "\e[19;3~"}
   - {key: F9, mods: Super, chars: "\e[20;3~"}
   - {key: F10, mods: Super, chars: "\e[21;3~"}
-  - {key: F11, mods: Super, chars: "\e[23;3~"}
+  # - {key: F11, mods: Super, chars: "\e[23;3~"}
+  # - { key: F11, command: { program: "fullscreen" } }
+  - { key: F11, command: {program: "wmctrl", args: ["-r", ":ACTIVE:", "-b", "toggle,fullscreen" ]} }
   - {key: F12, mods: Super, chars: "\e[24;3~"}
   - {key: NumpadEnter, chars: "\n"}
