--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,7 +14,13 @@ workspace_layout default
 set $mod Mod1
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: DejaVuSansMono Nerd Font 13
+# font pango: DejaVuSansMono Nerd Font 13
+font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+font pango:DejaVu Sans Mono 15
+font pango:DejaVu Sans Mono, Terminus Bold Semi-Condensed 15
+font pango:Terminus 15px
+
+
 
 # autostart
 exec --no-startup-id feh --bg-scale ~/Pictures/great/camera.jpg
@@ -77,8 +83,8 @@ bindsym XF86MonBrightnessDown  exec brightnessctl set 20%- > /dev/null
 # bindsym XF86AudioPrev exec playerctl previous  
 
 # bindsym $mod+b exec google-chrome-stable
-# bindsym $mod+b exec firefox
-bindsym $mod+b exec ~/.script/startbrowser.sh
+bindsym $mod+b exec firefox
+# bindsym $mod+b exec ~/.script/startbrowser.sh
 
 # start a terminal
 # i3的脚本，自动选择系统安装的默认终端
