--- a/.condarc
+++ b/.condarc
@@ -1,18 +1,15 @@
-auto_activate_base: true
+auto_activate_base: false
 
 show_channel_urls: true
 default_channels:
   - https://mirrors.bfsu.edu.cn/anaconda/pkgs/main
   - https://mirrors.bfsu.edu.cn/anaconda/pkgs/r
+  - https://mirrors.bfsu.edu.cn/anaconda/pkgs/msys2
 custom_channels:
   conda-forge: https://mirrors.bfsu.edu.cn/anaconda/cloud
   msys2: https://mirrors.bfsu.edu.cn/anaconda/cloud
   bioconda: https://mirrors.bfsu.edu.cn/anaconda/cloud
   menpo: https://mirrors.bfsu.edu.cn/anaconda/cloud
   pytorch: https://mirrors.bfsu.edu.cn/anaconda/cloud
-channels:
-  - https://mirrors.bfsu.edu.cn/anaconda/cloud/bioconda/
-  - https://mirrors.bfsu.edu.cn/anaconda/cloud/conda-forge/
-  - https://mirrors.bfsu.edu.cn/anaconda/pkgs/main/
-  - https://mirrors.bfsu.edu.cn/anaconda/pkgs/free/
-  - defaults
+  pytorch-lts: https://mirrors.bfsu.edu.cn/anaconda/cloud
+  simpleitk: https://mirrors.bfsu.edu.cn/anaconda/cloud
