update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,6 +2,20 @@ Host raspbian
     User qiang.qi
     HostName 192.168.50.46
 
+Host raspbian-via-fpga
+    User qiang.qi
+    Port 10050
+    HostName 10.1.10.81
+
+Host asus
+    User baildagq
+    HostName 192.168.50.87
+
+Host asus-via-fpga
+    User baildagq
+    Port 10060
+    HostName 10.1.10.81
+
 Host tencent
     User ubuntu
     HostName 43.143.136.65
@@ -48,8 +62,12 @@ Host 160
   HostName 172.18.1.160
 
 Host 161
-  User qiang.qi
+  User root
   HostName 172.18.1.161
+
+Host 182
+  User root
+  HostName 172.18.1.182
 
 Host jump
     User qiang.qi
@@ -76,7 +94,7 @@ Host ts
     # ## sample for ProxyCommand
     # ProxyCommand ssh -W %h:%p <jumpserver>
 
-Host dcu
+Host 123
     User qiang.qi
     HostName 172.18.1.123
 
@@ -128,14 +146,5 @@ Host tmp003
 
 Host fpga
     User qiang.qi
-    HostName 10.1.36.45
+    HostName 10.1.10.81
 
-Host asus
-    User qiqiang
-    HostName 192.168.50.202
-
-Host asus-via-hosteons
-    User qiqiang
-    HostName 0.0.0.0
-    Port 1111
-    ProxyJump hosteons
