--- a/.ssh/config
+++ b/.ssh/config
@@ -16,6 +16,11 @@ Host asus-via-fpga
     Port 10060
     HostName 10.1.10.81
 
+Host asus-via-tencent
+    User baildagq
+    Port 10050
+    HostName 43.143.136.65
+
 Host tencent
     User ubuntu
     HostName 43.143.136.65
