--- a/.ssh/config
+++ b/.ssh/config
@@ -38,6 +38,15 @@ Host c5
     User root
     HostName 172.18.1.29
 
+# 4 * V100
+Host 65
+	User qiang.qi
+	HostName 172.18.1.65
+
+Host 65root
+	User root
+	HostName 172.18.1.65
+
 Host 110
     User qiang.qi
     HostName 172.18.1.110
@@ -46,6 +55,7 @@ Host 111
     User qiang.qi
     HostName 172.18.1.111
 
+# 4 * 3090
 Host 112
 	User qiang.qi
 	HostName 172.18.1.112
@@ -54,23 +64,32 @@ Host 112root
 	User root
 	HostName 172.18.1.112
 
+# 8 * V100
 Host 128
   User qiang.qi
   HostName 172.18.1.128
 
+# 8 * A10
 Host 136
   User qiang.qi
   HostName 172.18.1.136
 
+# 8 * 4090
 Host 160
   User qiang.qi
   HostName 172.18.1.160
 
+# 8 * 4090
 Host 161
   User root
   HostName 172.18.1.161
 
 Host 182
+  User qiang.qi
+  Port 22
+  HostName 172.18.1.182
+
+Host 182root
   User root
   HostName 172.18.1.182
 
@@ -83,8 +102,12 @@ Host linaro
     HostName 10.1.36.7
 
 Host gpu
-    User qiqiang
-    HostName 10.1.36.3
+    User qiang.qi
+    HostName 10.1.10.79
+
+Host gpuroot
+    User root
+    HostName 10.1.10.79
 
 Host platform
     User root
