--- a/.ssh/config
+++ b/.ssh/config
@@ -11,19 +11,33 @@ Host asus
     User baildagq
     HostName 192.168.50.87
 
-Host asus-via-fpga
-    User baildagq
-    Port 10060
-    HostName 10.1.10.81
-
 Host asus-via-tencent
+    User baildagq
+    Port 20000
+    HostName 43.143.136.65
+
+Host asus-via-tencent-autossh
     User baildagq
     Port 10050
     HostName 43.143.136.65
 
+Host asus-via-tencent-self
+    User baildagq
+    Port 2823
+    HostName 42.193.106.242
+
+Host gpu-via-tencent-self
+    User qiang.qi
+    Port 2822
+    HostName 42.193.106.242
+
 Host tencent
     User ubuntu
     HostName 43.143.136.65
+
+Host tencent-self
+    User qiang.qi
+    HostName 42.193.106.242
 
 Host algo001
     User qiang.qi
@@ -42,6 +56,11 @@ Host c5
 Host 65
 	User qiang.qi
 	HostName 172.18.1.65
+
+# 4 * V100
+Host 68
+	User root
+	HostName 172.18.1.68
 
 Host 65root
 	User root
