update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -31,6 +31,20 @@ Host gpu-via-tencent-self
     Port 2822
     HostName 42.193.106.242
 
+Host asus-via-aliyun-server-1
+    User qiang.qi
+    Port 2822
+    HostName 47.98.135.174
+
+Host aliyun-server-1
+    User root
+    HostName 47.98.135.174
+
+Host aliyun-server-2
+    User root
+    HostName  47.98.141.136
+
+
 Host tencent
     User ubuntu
     HostName 43.143.136.65
@@ -127,6 +141,16 @@ Host gpu
 Host gpuroot
     User root
     HostName 10.1.10.79
+
+Host gpu-via-tencent-self
+    User qiang.qi
+    Port 2822
+    HostName 42.193.106.242
+
+Host gpu-via-aliyun-server-1
+    User qiang.qi
+    Port 2822
+    HostName 47.98.135.174
 
 Host platform
     User root
