chore: update ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -9,7 +9,7 @@ Host raspbian-via-fpga
 
 Host asus
     User baildagq
-    HostName 192.168.50.87
+    HostName 192.168.1.87
 
 Host asus-via-tencent
     User baildagq
@@ -23,11 +23,6 @@ Host asus-via-tencent-autossh
 
 Host asus-via-tencent-self
     User baildagq
-    Port 2823
-    HostName 42.193.106.242
-
-Host gpu-via-tencent-self
-    User qiang.qi
     Port 2822
     HostName 42.193.106.242
 
@@ -36,18 +31,21 @@ Host asus-via-aliyun-server-1
     Port 2822
     HostName 47.98.135.174
 
-Host aliyun-server-1
+Host aliyun-server-1-root
     User root
     HostName 47.98.135.174
 
-Host aliyun-server-2
+Host aliyun-server-1
+    User qiang.qi
+    HostName 47.98.135.174
+
+Host aliyun-server-2-root
     User root
     HostName  47.98.141.136
 
-
-Host tencent
-    User ubuntu
-    HostName 43.143.136.65
+Host aliyun-server-2
+    User qiang.qi
+    HostName  47.98.141.136
 
 Host tencent-self
     User qiang.qi
@@ -85,7 +83,7 @@ Host 110
     HostName 172.18.1.110
 
 Host 111
-    User qiang.qi
+    User root
     HostName 172.18.1.111
 
 # 4 * 3090
@@ -113,7 +111,7 @@ Host 160
   HostName 172.18.1.160
 
 # 8 * 4090
-Host 161
+Host 161root
   User root
   HostName 172.18.1.161
 
